# XDRONE

./: .gitignore  MCU.SchDoc  POWER.SchDoc  XDRONE.PrjPcb  XDRONE.PrjPcbStructure  XDRONE.SchDoc
01_SCH/: 01_XDRONE.SchDoc  02_POWER.SchDoc  03_01_MCU.SchDoc  03_ACCELEROMETER.SchDoc  03_GYROSCOPE.SchDoc  04_ALTIMETER.SchDoc  05_MOTORS.SchDoc  06_01_MCU.SchDoc
Firmware/: .cproject  .project  .projectlinkstore  XDRONE.pintool  XDRONE.slcp  XDRONE.slps  app.c  main.c  vscode.conf  xdrone.pintool  xdrone.slcp  xdrone.slps
Firmware/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
Firmware/.uceditor/: .XDRONE.cli_core.cedit  .XDRONE.clicli.cedit  .XDRONE.clicli0.cedit  .XDRONE.clixdrone.cedit  .XDRONE.device_init_dcdc.cedit  .XDRONE.device_init_dpll.cedit  .XDRONE.device_init_emu.cedit  .XDRONE.device_init_hfxo.cedit  .XDRONE.device_init_lfxo.cedit  .XDRONE.dmadrv.cedit  .XDRONE.emlib_core.cedit  .XDRONE.iostream_usartiouart.cedit  .XDRONE.iostream_usartuart_cli.cedit  .xdrone.spidrv_eusartGYRO.cedit  .xdrone.spidrv_usartGYRO.cedit  .xdrone.uartdrv_usartGYRO.cedit
Firmware/XDRONE/: main.c
Firmware/XDRONE_cmake/: CMakeLists.txt  CMakePresets.json  XDRONE.cmake  XDRONE_project.cmake  linkerfile.ld
Firmware/autogen/: .crc_config.crc  sl_cli_handles.h  sl_cli_instances.c  sl_component_catalog.h  sl_event_handler.c  sl_iostream_handles.c  sl_iostream_init_usart_instances.c  sl_iostream_init_usart_instances.h
Firmware/config/: pin_config.h  sl_cli_config_xdrone.h  sl_device_init_dcdc_config.h  sl_device_init_hfxo_config.h  sl_device_init_lfxo_config.h  sl_iostream_usart_iouart_config.h  sl_iostream_usart_uart_cli_config.h
Hardware/: Output.OutJob  XDRONE.Annotation  XDRONE.PrjPcb  XDRONE.PrjPcbStructure
(+106 files in other folders)
